demo-gitops/service-c/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: service-c
  labels:
    app: service-c
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: service-c
  template:
    metadata:
      labels:
        app: service-c
        root-version: v2.1.2
    spec:
      containers:
        - name: service-c
          image: ghcr.io/jhbaek-dev/k8s-blue-green-demo/service-c:qa-860f9a2-20250823-053026
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
  strategy:
    blueGreen:
      autoPromotionEnabled: false
      activeService: service-c
      previewService: service-c-preview
