demo-gitops/service-c/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-c-preview
  labels:
    app: service-c
spec:
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: service-c
