demo-gitops/service-c/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-c
  labels:
    app: service-c
spec:
  ports:
  - port: 3000
    targetPort: tcp
    protocol: TCP
    name: tcp
  selector:
    app: service-c
